second commit.html

--- a/index.html
+++ b/index.html
@@ -147,17 +147,31 @@ Happy birthday to someone truly special 🎂💝
 With all my love, always 💞
         `;
           const finalMessage1 = `
-My dear akka 123💖
-A sister by heart, a blessing by life 🌸
-Thank you for every moment you stood by me 🤍
-Your care shaped me in ways I’ll always remember 🌿
-I miss hearing your voice and seeing your smile 😊💭
-Some connections are forever, even in silence 💫
-On your birthday, I wish you peace, love, and light ✨
-May your future be bright and kind to you 🌟
-Happy birthday to someone truly special 🎂💝
-With all my love, always 💞
-        `;
+Happy Birthday, my dear akka 🎂💖
+Your care and your love have always meant everything to me 🤍✨
+I pray that our bond continues till my very last breath 🌱♾️
+I’m really missing you more than words can say 😔💭
+Only my heart knows the pain of not having you close 💔🌙
+Some feelings are too deep to explain, even when I try 🕊️🥺
+Still, my love and respect for you never changed 💞🙏
+On your special day, I wish you peace and strength 🌸💫
+Inka chaala cheppaali anukunna akka, i am really sorry,endulo hurt ayyaavo teliyadu
+but one thing, nuvvu unna lekunna u always remains same for me,nuvvu nannu tammudu list lo teesina,nenu teeyanu.
+antey inka final gaa---
+All the best for your beautiful future 🌈✨
+May every dream you carry come true one by one 🌟🤍
+I truly want to see you reach the top position you deserve 👑🚀
+Watching you succeed will always make me proud 🥹🌹
+Cheers to 22, may it be filled with joy, growth, and fun 🥂🎉
+Even though I couldn’t find another way to talk to you 💌😔
+I chose this path just to let you know I still care 💖🕊️
+No matter where life takes us, I wish you only happiness 🌷🤍
+With all my heart, always your lovable bro 💞✨
+nenu wish chesaanu ani maatladam avsaram led akka, its your choice,
+kaani ee wish gurtundaali ani korukuntunna, and naaku gurtundi potundi because its my 
+first website to host😁
+last time nee bday ki 12 ki wish cheyled ani chaala feel ayyaa, ee saari ila unnaam, so i am wishing like this🤗
+Enjoy your day and atleast remember me as a brother as once upon a time he is my tammudu👫🏻🩵      `;
 
         // --- Utility Functions ---
 
@@ -442,4 +456,5 @@ With all my love, always 💞
 
 </body>
 </html>
+
 
