--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Enjoy your day and atleast remember me as a brother as once upon a time he is my
                                 ${finalMessage1.trim().replace(/\n/g, '<br><br>')}
                             </p>
                         </div>
-                        <p class="mt-6 text-xl text-pink-500 font-bold">Hope you loved this surprise, my !</p>
+                        <p class="mt-6 text-xl text-pink-500 font-bold">Hope you loved this wishes, my akka gaaru !</p>
                         <p class="text-xs text-gray-400 mt-2">
                            (Pretend this is playing a happy birthday song and party bombs are blasting! 🥳)
                         </p>
@@ -456,5 +456,6 @@ Enjoy your day and atleast remember me as a brother as once upon a time he is my
 
 </body>
 </html>
+
 
 
