--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Enjoy your day and atleast remember me as a brother as once upon a time he is my
                                     <path d="M100 20 L95 40 L105 40 Z" fill="#ff9800"/>
                                 </g>
                                 <!-- Text Decoration -->
-                                <text x="100" y="145" font-family="Inter" font-size="14" fill="#a855f7" text-anchor="middle">HBD AKKA </text>
+                                <text x="100" y="145" font-family="Inter" font-size="14" fill="#a855f7" text-anchor="middle">HBD AKKA💞 </text>
                             </svg>
                         </div>
                     `;
@@ -456,6 +456,7 @@ Enjoy your day and atleast remember me as a brother as once upon a time he is my
 
 </body>
 </html>
+
 
 
 
